crates/wac-parser/tests/resolution/fail/undefined-name.wac
package test:comp;

type x = x;